[package]
name = "qasm"
version = "0.1.0"
authors = ["Adam Kelly <adamkelly2201@gmail.com>"]
description = "A OPENQASM 2.0 Parser"

[dependencies]
regex = "0.2"

[[bin]]
name = "lex"
path = "examples/lex_repl.rs"

[[bin]]
name = "parse"
path = "examples/parse_repl.rs"

[[bin]]
name = "main"
path = "examples/main.rs"
