[package]
name = "qasm"
version = "0.1.0"
authors = ["Adam Kelly <adamkelly2201@gmail.com>"]
description = "A OPENQASM 2.0 Parser"
homepage = "https://github.com/QCGPU/qasm-rust"
documentation = "https://docs.rs/qasm/0.1.0/qasm/"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "QCGPU/qasm-rust", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
regex = "0.2"

[dev-dependencies]
glob = "0.2"

[[bin]]
name = "main"
path = "examples/main.rs"
